--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "browserslist",
         "chrono",
         "cyclomatic",
-        "inmutable"
+        "inmutable",
+        "millis"
     ]
 }
